tests/baselines/reference/noSilentNeverTypeLeak2.errors.txt
noSilentNeverTypeLeak2.ts(36,3): error TS2322: Type 'ActionFunction<number, ToParameterizedObject<{ doStuff: unknown; doOtherStuff: string; }>>' is not assignable to type 'ActionFunction<number, ToParameterizedObject<{ doStuff: number; doOtherStuff: string; }>>'.
  Type 'ToParameterizedObject<{ doStuff: unknown; doOtherStuff: string; }>' is not assignable to type 'ToParameterizedObject<{ doStuff: number; doOtherStuff: string; }>'.
    Type '{ type: "doStuff"; params: unknown; }' is not assignable to type 'ToParameterizedObject<{ doStuff: number; doOtherStuff: string; }>'.
      Type '{ type: "doStuff"; params: unknown; }' is not assignable to type '{ type: "doStuff"; params: number; }'.
        Types of property 'params' are incompatible.
          Type 'unknown' is not assignable to type 'number'.


==== noSilentNeverTypeLeak2.ts (1 errors) ====
    type Values<T> = T[keyof T];
    
    interface ParameterizedObject {
      type: string;
      params?: unknown;
    }
    
    type ActionFunction<TParams, TAction extends ParameterizedObject> = {
      (params: TParams): void;
      _out_TAction?: TAction;
    };
    
    type ToParameterizedObject<TParameterizedMap> = Values<{
      [K in keyof TParameterizedMap & string]: {
        type: K;
        params: TParameterizedMap[K];
      };
    }>;
    
    declare function enqueueActions<TParams, TAction extends ParameterizedObject>(
      collect: (params: TParams) => void,
    ): ActionFunction<TParams, TAction>;
    
    declare function setup<TActions>(actions: {
      [K in keyof TActions]: ActionFunction<
        TActions[K],
        ToParameterizedObject<TActions>
      >;
    }): void;
    
    setup({
      doStuff: enqueueActions((params: number) => {}),
    });
    
    setup({
      doStuff: enqueueActions((params: number) => {}),
      ~~~~~~~
!!! error TS2322: Type 'ActionFunction<number, ToParameterizedObject<{ doStuff: unknown; doOtherStuff: string; }>>' is not assignable to type 'ActionFunction<number, ToParameterizedObject<{ doStuff: number; doOtherStuff: string; }>>'.
!!! error TS2322:   Type 'ToParameterizedObject<{ doStuff: unknown; doOtherStuff: string; }>' is not assignable to type 'ToParameterizedObject<{ doStuff: number; doOtherStuff: string; }>'.
!!! error TS2322:     Type '{ type: "doStuff"; params: unknown; }' is not assignable to type 'ToParameterizedObject<{ doStuff: number; doOtherStuff: string; }>'.
!!! error TS2322:       Type '{ type: "doStuff"; params: unknown; }' is not assignable to type '{ type: "doStuff"; params: number; }'.
!!! error TS2322:         Types of property 'params' are incompatible.
!!! error TS2322:           Type 'unknown' is not assignable to type 'number'.
!!! related TS6500 noSilentNeverTypeLeak2.ts:36:3: The expected type comes from property 'doStuff' which is declared here on type '{ doStuff: ActionFunction<number, ToParameterizedObject<{ doStuff: number; doOtherStuff: string; }>>; doOtherStuff: ActionFunction<string, ToParameterizedObject<{ doStuff: number; doOtherStuff: string; }>>; }'
      doOtherStuff: (params: string) => {},
    });
    
    setup({
      doStuff: enqueueActions((params: number) => {}),
      doOtherStuff: (params) => {},
    });